# CapstoneProject

./: Cargo.toml  Gantt Chart.xlsx  README.md  Rocket.toml  db.sqlite  product_images.html  products.sqlite
pages/: aboutus.html  adminconfirm.html  admincreation.html  admindeletion.html  adminlogin.html  adminmenu.html  checkorderstatus.html  checkout.html  donate.html  homepage.html  index.html  modifyinventory.html  modifywebsite.html  orderconfirmation.html  products.html  shoppingcart.html
src/: main.rs
