[package]
name = "kent_state_robotics_website"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_sqlite"] }
serde = { version = "1.0.210", features = ["derive"] }
sha2 = "0.9"
hex = "0.4"
uuid = { version = "1.3", features = ["v4"] }
chrono = "0.4"
rand = "0.8"
serde_json = "1.0"
base64 = "0.21"
